# Robo3-2020-7_final

./: LICENSE  README.md
crane_x7_examples/: README.md  package.xml
crane_x7_examples/launch/: final.launch
crane_x7_examples/scripts/: camera.py  dousa1.py  dousa2.py  rats.py  vision.py
crane_x7_gazebo/: package.xml
crane_x7_gazebo/worlds/: table.world
