<?xml version="1.0"?>
<package format="2">
  <name>crane_x7_gazebo</name>
  <version>0.0.0</version>
  <description>The crane_x7_gazebo package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>
  <author email="s19c1105lw@s.chibakoudai.jp">Masafumi Hoshino</author>
  <author email="s19c1051vs@s.chibakoudai.jp">Yuya Sakamoto</author>
  <author email="s19c1033ap@s.chibakoudai.jp">Takumi Kawamoto</author>
  <author email="s19c1080un@s.chibakoudai.jp">Yui Tsubaki</author>

  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_export_depend>gazebo</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>roboticsgroup_gazebo_plugins</exec_depend>
  <exec_depend>roslang</exec_depend>
  <exec_depend>urdf_parser_plugin</exec_depend>

  <exec_depend>crane_x7_moveit_config</exec_depend>
  <exec_depend>crane_x7_control</exec_depend>
  <exec_depend>crane_x7_description</exec_depend>

</package>
